snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha1
4728405481816ce8230a34a1b3184b78878c7cc0